fixed horizontal scroll issue on movie div css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,6 +118,8 @@ header{
     margin-bottom: 0;
     text-align: center;
     border: 2px solid $text-color;
+    border-right: 0;
+    border-left: 0;
     display: flex;
     @include flex(column, center);
 
